--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -546,3 +546,102 @@ height: 440px;
 
 
 }
+.blogs{
+  margin-top: 135px;
+  padding: 96px 0;
+  background: #fffcf4;
+}
+.blogs .blog-top{
+  text-align: center;
+}
+.blogs .blog-top .desc{
+  color:#696262;
+  margin: 16px auto 0;
+  font-family: Poppins;
+font-weight: 400;
+font-style: Regular;
+font-size: 1.6rem;
+line-height: 1.75;
+letter-spacing: 0%;
+text-align: center;
+
+}
+.blogs .blog-list{
+  gap: 30px;
+  display: flex;
+  margin-top: 55px;
+}
+.blogs .item:hover{
+  box-shadow: 0px 16px 32px 0px rgba(0, 0, 0, 0.05);
+}
+.blogs .item{
+  width: 33.33%;
+  border-radius: 16px;
+  background: #fff;
+}
+.blogs .item .thumb{
+  width: 100%;
+  height: 250px;
+  object-fit: cover;
+border-top-left-radius: 16px;
+border-top-right-radius: 16px;
+
+}
+.blogs .item .info{
+  padding: 20px 20px 28px;
+}
+.blogs .item .date{
+  padding-bottom: 12px;
+  position: relative;
+  display: inline-flex;
+  align-items: center;
+font-family: Poppins;
+font-weight: 400;
+font-style: Regular;
+font-size: 1.4rem;
+line-height: 1.86;
+letter-spacing: 0%;
+color: #5F5B53;
+
+}
+.blogs .item .date::before{
+  content: "";
+  margin-right: 4px;
+  display: inline-block;
+  width: 6px;
+  height: 6px;
+  border-radius: 50%;
+  background: var(--primary-color);
+}
+.blogs .item .date::after{
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  right: -27px;
+  content: "";
+
+  height: 1px;
+  border-radius: 0.5px;
+  background:#E2DFDA;
+
+}
+.blog-list .item .title{
+  color: #171100;
+
+  font-family: Poppins;
+  margin-top: 12px;
+font-weight: 600;
+font-style: SemiBold;
+font-size: 1.6rem;
+line-height: 1.75;
+letter-spacing: 0%;
+
+}
+.blogs .item .btn{
+  margin-top: 12px;
+}
+.blogs .item .btn:hover{
+  background: var(--primary-color);
+}
+
+
