--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -567,6 +567,7 @@ text-align: center;
 
 }
 .blogs .blog-list{
+  overflow: hidden;
   gap: 30px;
   display: flex;
   margin-top: 55px;
@@ -575,7 +576,8 @@ text-align: center;
   box-shadow: 0px 16px 32px 0px rgba(0, 0, 0, 0.05);
 }
 .blogs .item{
-  width: 33.33%;
+  flex-shrink: 0;
+  width: calc(33.33% - 20px);
   border-radius: 16px;
   background: #fff;
 }
@@ -639,9 +641,105 @@ letter-spacing: 0%;
 }
 .blogs .item .btn{
   margin-top: 12px;
+  font-size: 1.4rem;
 }
 .blogs .item .btn:hover{
   background: var(--primary-color);
 }
+.blogs .dots{
+  display: flex;
+  justify-content: center;
+  margin-top: 38px;
+  gap: 6px;
+}
+.blogs .dot{
+width: 6px;
+height: 6px;
+border-radius: 50%;
+background: #5F5B53;
+cursor: pointer;
+}
+.blogs .dot.active{
+  background-color: var(--primary-color);
+cursor: default;
+}
+/* ---------footer------------------ */
+footer{
+  background-color:#2e2100 ;
+  padding:  96px 135px 0px;
 
+}
+.footer .row{
+  display: flex;
+  padding-bottom: 38px;
+  border-bottom: 1px solid #59554B ;
+}
+.footer .row .column{
+  width: 21.66%;
+}
+.footer .row .column:first-child{
+  width: 35%;
+}
+.footer .desc{
+  margin-top: 18px;
+  max-width: 267px;
+  font-family: Poppins;
+font-weight: 400;
+font-style: Regular;
+font-size: 1.4rem;
+line-height: 1.85;
+letter-spacing: 0%;
+color: #bfbcb2;
+}
+.footer .social{
+  display: flex;
+  gap: 18px;
+  margin-top: 18px;
+}
+.footer .title{
+  display: inline-block;
+  padding-bottom: 14px;
+  padding-right: 48px;
+  border-bottom: 1px solid #59554B;
+  color: #fff;
+  font-family: Poppins;
+font-weight: 600;
+font-style: SemiBold;
+font-size: 16px;
+line-height: 28px;
+letter-spacing: 0%;
 
+}
+.footer .list {
+  margin-top:28px;
+}
+.footer .list a{
+  display:inline-block;
+  margin-bottom: 12px;
+  color: #bfbcb2;
+  font-size: 1.4rem;
+  line-height: 1.86;
+}
+.footer .list li:last-child a{
+  margin-bottom: 0px;
+}
+.footer .list strong{
+  font-family: Poppins;
+font-weight: 600;
+font-style: SemiBold;
+font-size: 1.4rem;
+line-height: 1.86;
+letter-spacing: 0%;
+color: #fff;
+}
+.footer .copyright{
+  padding: 28px 0;
+  font-family: Poppins;
+font-weight: 400;
+font-style: Regular;
+font-size: 1.4rem;
+line-height: 1.86;
+letter-spacing: 0%;
+text-align: center;
+color: #807D74;
+}
